--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@remnote/plugin-sdk": "^0.0.7",
+    "@rstacruz/scriptjs": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
